# spatDSP

./: LICENSE  README.md  example.py  pyproject.toml
.github/workflows/: python-package.yml
src/spatDSP/: __init__.py  chebyshev.py  curves.py  dsp.py  graph.py  permtest.py  preprocessing.py  results.py  utils.py
tests/: test.py
