[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spatDSP"
version = "0.1.0"
description = "Differential Spatial Patterning (DSP) using heat diffusion curves and permutation testing"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Thomas Keany, Israel Martinez Hernandez}]

dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "scikit-learn",
  "torch",
  "statsmodels",
  "anndata",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
